RESOLVED FIXED235279
[WebIDL] Blob-related methods should use _relevant_ context instead of _current_
https://bugs.webkit.org/show_bug.cgi?id=235279
Summary [WebIDL] Blob-related methods should use _relevant_ context instead of _current_
Alexey Shvayka
Reported 2022-01-16 08:57:38 PST
[WebIDL] Blob-related methods should use _relevant_ context instead of _current_
Attachments
Patch (12.79 KB, patch)
2022-01-16 09:00 PST, Alexey Shvayka
no flags
Patch (21.77 KB, patch)
2022-01-23 18:58 PST, Alexey Shvayka
no flags
Patch (18.30 KB, patch)
2022-01-25 13:54 PST, Alexey Shvayka
no flags
Alexey Shvayka
Comment 1 2022-01-16 09:00:33 PST
Radar WebKit Bug Importer
Comment 2 2022-01-23 08:58:17 PST
Alexey Shvayka
Comment 3 2022-01-23 18:58:17 PST
Created attachment 449775 [details] Patch Add ChangeLog and tests.
EWS Watchlist
Comment 4 2022-01-23 19:00:37 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Alexey Shvayka
Comment 5 2022-01-25 13:54:07 PST
Created attachment 449963 [details] Patch Remove invalid test.
Alexey Shvayka
Comment 6 2022-01-25 16:34:57 PST
Comment on attachment 449963 [details] Patch Thanks for review, mac-AS-debug-wk2 failures are unrelated.
EWS
Comment 7 2022-01-25 17:12:09 PST
Committed r288592 (246414@main): <https://commits.webkit.org/246414@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449963 [details].
Note You need to log in before you can comment on or make changes to this bug.