[WebIDL] Blob-related methods should use _relevant_ context instead of _current_ https://bugs.webkit.org/show_bug.cgi?id=235279

Patch by Alexey Shvayka <ashvayka@apple.com> on 2022-01-25
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Import WPT tests from TBA.

* web-platform-tests/FileAPI/blob/Blob-methods-from-detached-frame-expected.txt: Added.
* web-platform-tests/FileAPI/blob/Blob-methods-from-detached-frame.html: Added.
* web-platform-tests/FileAPI/support/empty-document.html: Added.

Source/WebCore:

This patch fixes the following methods to rely on _relevant_ global object instead of _current_:

  1. Blob's slice() / stream() / arrayBuffer() / text() as explicitly required by the File API spec [1].
     Before this change, methods from detached <iframe> were throwing when called on a main frame's Blob.
     Aligns WebKit with Blink and Gecko.

  2. HTMLCanvasElement's toBlob() as per HTML spec [2]: a task should be queued on _relevant_ document's
     event loop.

  3. HTMLCanvasElement's transferControlToOffscreen() / captureStream() per recommendatation for spec
     authors [4], and to align with toBlob(). transferControlToOffscreen() should certainly pass _relevant_
     context, which would be used later for Blob creation.

[1] https://w3c.github.io/FileAPI/#blob-get-stream
[2] https://html.spec.whatwg.org/#canvas-blob-serialisation-task-source
[3] https://html.spec.whatwg.org/multipage/webappapis.html#realms-settings-objects-global-objects:concept-relevant-everything-2

Test: imported/w3c/web-platform-tests/FileAPI/blob/Blob-methods-from-detached-frame.html

Not sure if changes to HTMLCanvasElement methods are even testable.

* fileapi/Blob.cpp:
(WebCore::Blob::slice const):
(WebCore::Blob::loadBlob):
(WebCore::Blob::text):
(WebCore::Blob::arrayBuffer):
(WebCore::Blob::stream):
* fileapi/Blob.h:
* fileapi/Blob.idl:
* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::toBlob):
(WebCore::HTMLCanvasElement::transferControlToOffscreen):
(WebCore::HTMLCanvasElement::captureStream):
* html/HTMLCanvasElement.h:
* html/HTMLCanvasElement.idl:
Mark transferControlToOffscreen() as [NewObject].


Canonical link: https://commits.webkit.org/246414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288592 268f45cc-cd09-0410-ab3c-d52691b4dbfc